@@ -1,3 +1,15 @@
+2011-02-19 Patrick Gansterer <paroga@webkit.org>
+
+        Reviewed by Andreas Kling.
+
+        Move KeygenWinCE from wince into win directory
+        https://bugs.webkit.org/show_bug.cgi?id=54804
+
+        Move this file into the win directory, since it can be used on all windows platforms.
+
+        * CMakeListsWinCE.txt:
+        * platform/win/SSLKeyGeneratorWin.cpp: Renamed from platform/wince/KeygenWinCE.cpp.
+
 2011-02-19  Patrick Gansterer  <paroga@webkit.org>
 
         Reviewed by Andreas Kling.
